--- a/archive_template.html
+++ b/archive_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Oso Haus - Archive</title>
+	<title>montti - Archive</title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
 	<link rel="stylesheet" href="style.css" >
@@ -11,7 +11,7 @@
 <div id="container">
 
 <header>
-<h1><a href="./">Oso Haus</a></h1>
+<h1><a href="./">montti</a></h1>
 <h2>Blog Archive</h2>
 </header>
 
