--- a/index_template.html
+++ b/index_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Oso Haus</title>
+	<title>montti</title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
 	<link rel="stylesheet" href="style.css" >
@@ -11,7 +11,7 @@
 <div id="container">
 
 <header>
-<h1>Oso Haus</h1>
+<h1>montti</h1>
 </header>
 
 <p>Hello, welcome to my blog. Here are some posts stolen from <a href="http://ludiclinux.com/">Ludic Linux</a>:</p>
