--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>montti</title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
-	<link rel="stylesheet" href="style.css" >
+	<link rel="stylesheet" type="text/css" href="style.css" >
 	<link rel="shortcut icon" href="images/favicon.png">
 </head>
 <body>
