--- a/index_template.html
+++ b/index_template.html
@@ -14,6 +14,8 @@
 <h1>montti</h1>
 </header>
 
+<img src="images/indeximg.jpeg">
+
 <p>Hello, welcome to my blog. Here are some posts stolen from <a href="http://ludiclinux.com/">Ludic Linux</a>:</p>
 
 <!--post list-->
