--- a/index_template.html
+++ b/index_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>montti</title>
+	<title>montti</title>/
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
 	<link rel="stylesheet" type="text/css" href="style.css" >
@@ -14,7 +14,7 @@
 <h1>montti</h1>
 </header>
 
-<img src="images/indeximg.jpeg">
+<img src="images/indeximg.jpeg" style="width: 50%; height: 50%"/>
 
 <p>Hello, welcome to my blog. Here are some posts stolen from <a href="http://ludiclinux.com/">Ludic Linux</a>:</p>
 
