--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>montti</title>/
+	<title>montti</title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
 	<link rel="stylesheet" type="text/css" href="style.css" >
