--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 <body>
 <div id="container">
+<nav class="menu">
+			<div class="nav-right">
+				<ul>
 
+					<li><a href="mailto:talktome@dismail.de">contact</a></li>
+					<li><a href="https://github.com/montti">github</a></li>
+				</ul>
+			</div>
+		</nav>
 <header>
 <h1>montti</h1>
 </header>
