--- a/index_template.html
+++ b/index_template.html
@@ -10,19 +10,21 @@
 <body>
 <div id="container">
 <nav class="menu">
+			<div class="nav-left">
+				<ul>
+					<li><a href="index.html"><img class="logo" src="images/favicon.png" alt=""><span class="sitename">montti</span></a></li>
+				</ul>
+			</div>
+
 			<div class="nav-right">
 				<ul>
-
 					<li><a href="mailto:talktome@dismail.de">contact</a></li>
 					<li><a href="https://github.com/montti">github</a></li>
 				</ul>
 			</div>
 		</nav>
-<header>
-<h1>montti</h1>
-</header>
 
-<img src="images/indeximg.jpeg" style="width: 75%; height: 75%"/>
+<img src="images/indeximg.jpeg" style="width: 100%"/>
 
 <p>Hello, welcome to my blog. Here are some posts stolen from <a href="http://ludiclinux.com/">Ludic Linux</a>:</p>
 
