--- a/index_template.html
+++ b/index_template.html
@@ -27,19 +27,13 @@
 
 <img src="images/indeximg.jpeg" style="width: 100%"/>
 
-<p>Hello, welcome to my blog. Here are some posts stolen from <a href="http://ludiclinux.com/">Ludic Linux</a>:</p>
+<p>Hi, welcome to my website. I'm currently trying stuff.</p>
 
 <!--post list-->
 
 <p>Old posts are in the <a href="archive.html">Archive</a>.</p>
 
 <p>RSS is in the <a href="rss.xml">RSS</a>.</p>
-
-<p>This is an example blog for <a href="https://gitlab.com/uoou/blop">blop</a>. It only has <del>three</del> several posts and it's barely got any html or styling. It's just an example, like, innit.
-
-<p>I love you ❤️</p>
-
-<p>Drew.</p>
 
 </div>
 </body>
