--- a/index_template.html
+++ b/index_template.html
@@ -21,6 +21,7 @@
 				<ul>
 					<li><a href="mailto:talktome@dismail.de">contact</a></li>
 					<li><a href="https://github.com/montti">github</a></li>
+					<li><a href="https://montti.github.io/rss.xml">rss</a></li>
 				</ul>
 			</div>
 		</nav>
