--- a/index_template.html
+++ b/index_template.html
@@ -36,4 +36,7 @@
 
 </div>
 </body>
+<footer>
+	Created with <a href="https://gitlab.com/uoou/blop">blop</a>. Styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>
+</footer>
 </html>
