--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 </div>
 </body>
 <footer>
-	Created with <a href="https://gitlab.com/uoou/blop">blop</a>. Styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>
+	Created with <a href="https://gitlab.com/uoou/blop">blop</a>, styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>.
 </footer>
 </html>
