--- a/index_template.html
+++ b/index_template.html
@@ -26,7 +26,7 @@
 			</div>
 		</nav>
 
-<img src="images/indeximg.jpeg" style="width: 100%"/>
+<img src="images/indeximg.jpeg" alt="Analog photo of hub cap gracefully set over a dead-ish tree."style="width: 100%"/>
 
 <p>Hi, welcome to my website. I'm currently trying stuff.</p>
 
