--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <img src="images/indeximg.jpeg" alt="Analog photo of hub cap gracefully set over a dead-ish tree."style="width: 100%"/>
 
-<p>Hi, welcome to my website. I'm currently trying stuff.</p>
+<p>Hi, I'm currently an undergraduate CS student at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <ul class="postlist">
 <li><a href="posts/first.html">first</a> <em>on</em> April 15, 2021</li>
@@ -39,6 +39,8 @@
 </div>
 </body>
 <footer>
+	1. Universidad de Concepción, Chile
+
 	Created with <a href="https://gitlab.com/uoou/blop">blop</a>, styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>.
 </footer>
 </html>
