--- a/index_template.html
+++ b/index_template.html
@@ -37,8 +37,8 @@
 </div>
 </body>
 <footer>
-	1. Universidad de Concepción, Chile
+	<p>1. Universidad de Concepción, Chile</p>
 
-	Created with <a href="https://gitlab.com/uoou/blop">blop</a>, styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>.
+	<p>Created with <a href="https://gitlab.com/uoou/blop">blop</a>, styled with a modified <a href="style.css">css</a> file from  <a href="https://notthebe.ee/">Wolfgang's Blog</a>.</p>
 </footer>
 </html>
