--- a/index_template.html
+++ b/index_template.html
@@ -22,6 +22,7 @@
 					<li><a href="mailto:talktome@dismail.de">contact</a></li>
 					<li><a href="https://github.com/montti">github</a></li>
 					<li><a href="https://montti.github.io/rss.xml">rss</a></li>
+					<li><a href="archive.html">archive</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -31,8 +32,6 @@
 <p>Hi, I'm currently an undergraduate CS student at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <!--post list-->
-
-<p>Old posts are in the <a href="archive.html">Archive</a>.</p>
 
 </div>
 </body>
