--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<li><a href="mailto:talktome@dismail.de">contact</a></li>
 					<li><a href="https://github.com/montti">github</a></li>
 					<li><a href="https://montti.github.io/rss.xml">rss</a></li>
+					<li><a href="archive.html">archive</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -33,8 +34,6 @@
 <ul class="postlist">
 <li><a href="posts/first.html">first</a> <em>on</em> April 15, 2021</li>
 </ul>
-
-<p>Old posts are in the <a href="archive.html">Archive</a>.</p>
 
 </div>
 </body>
