--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p>Hi, I'm currently an undergraduate CS student at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <ul class="postlist">
-<li><a href="posts/first.html">first</a> <em>on</em> April 15, 2021</li>
+<li><a href="posts/first.html">first</a> April 15, 2021</li>
 </ul>
 
 </div>
