--- a/archive_template.html
+++ b/archive_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>montti - Archive</title>
+	<title>archive</title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="rss.xml">
 	<link rel="stylesheet" href="style.css" >
@@ -12,7 +12,7 @@
 
 <header>
 <h1><a href="./">montti</a></h1>
-<h2>Blog Archive</h2>
+<h2>archive</h2>
 </header>
 
 <!--archive list-->
