--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
 <img src="images/indeximg.jpeg" alt="Analog photo of hub cap gracefully set over a dead-ish tree."style="width: 100%"/>
 
-<p>Hi, I'm currently an undergraduate CS student at UdeC<sup>1</sup>. This website is pretty empty.</p>
+<p>Hi, I'm currently a CS undergrad at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <ul class="postlist">
-<li><a href="posts/first.html">first</a> April 15, 2021</li>
+<li><a href="posts/so...-you-need-to-download-netbeans-8.2-in-$current_year.html">So... you need to download NetBeans 8.2 in $CURRENT_YEAR</a> April 16, 2021</li>
 </ul>
 
 </div>
