--- a/index_template.html
+++ b/index_template.html
@@ -29,7 +29,7 @@
 
 <img src="images/indeximg.jpeg" alt="Analog photo of hub cap gracefully set over a dead-ish tree."style="width: 100%"/>
 
-<p>Hi, I'm currently an undergraduate CS student at UdeC<sup>1</sup>. This website is pretty empty.</p>
+<p>Hi, I'm currently a CS undergrad at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <!--post list-->
 
