--- a/post_template.html
+++ b/post_template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>montti - <!--title--></title>
+	<title><!--title--></title>
 	<meta charset="utf-8">
 	<link rel="alternate" type="application/atom+xml" title="RSS Feed" href="../rss.xml">
 	<link rel="stylesheet" href="../style.css" >
@@ -13,7 +13,7 @@
 <header>
 <h1><a href="../">montti</a></h1>
 <h2><!--title--></h2>
-<div id="byline">by <!--author--> on <!--date--></div>
+<div id="byline"><!--date--></div>
 </header>
 
 <article>
