--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <p>Hi, I'm currently a CS undergrad at UdeC<sup>1</sup>. This website is pretty empty.</p>
 
 <ul class="postlist">
-<li><a href="posts/so...-you-need-to-download-netbeans-8.2-in-$current_year.html">So... you need to download NetBeans 8.2 in $CURRENT_YEAR</a> April 16, 2021</li>
+<li><a href="posts/literally-just-an-oatmeal-cookie-recipe.html">Literally just an oatmeal cookie recipe</a> August 12, 2021</li>
+<li><a href="posts/so...-you-need-to-download-netbeans-8.2-in-$current_year.html">So... you need to download NetBeans 8.2 in $CURRENT_YEAR</a> August 12, 2021</li>
 </ul>
 
 </div>
